# teststand_backup

./: README.md  myAnalyser.py
Arduino Firmware/: working.ino
Arduino Firmware/ThermalAir/: ThermalAir.ino
Arduino Firmware/ThermalAirSimpleControl/: ThermalAirSimpleControl.ino
Midas Frontend/: CMakeLists.txt  arduino-station.h  teststand-frontend.cpp
